# advent-of-code

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
aoc/utilities/: prepare_class.py  solution.py  task_to_markdown.py
aoc/year2023/day01_trebuchet/: README.md  trebuchet.py
aoc/year2023/day02_cube_conundrum/: README.md  cube_conundrum.py
aoc/year2023/day03_gear_ratios/: README.md  gear_ratios.py
aoc/year2023/day04_scratchcards/: README.md  scratchcards.py
aoc/year2023/day05_if_you_give_a_seed_a_fertilizer/: README.md  if_you_give_a_seed_a_fertilizer.py
aoc/year2023/day06_wait_for_it/: README.md  wait_for_it.py
aoc/year2023/day07_camel_cards/: README.md  camel_cards.py
aoc/year2023/day08_haunted_wasteland/: README.md  haunted_wasteland.py
aoc/year2023/day09_mirage_maintenance/: README.md  mirage_maintenance.py
aoc/year2023/day10_pipe_maze/: README.md  pipe_maze.py
aoc/year2023/day11_cosmic_expansion/: README.md  cosmic_expansion.py
aoc/year2023/day12_hot_springs/: README.md  hot_springs.py
aoc/year2023/day13_point_of_incidence/: README.md  point_of_incidence.py
aoc/year2023/day14_parabolic_reflector_dish/: README.md  parabolic_reflector_dish.py
aoc/year2023/day15_lens_library/: README.md  lens_library.py
aoc/year2023/day16_the_floor_will_be_lava/: README.md  the_floor_will_be_lava.py
aoc/year2023/day17_clumsy_crucible/: README.md  clumsy_crucible.py
aoc/year2023/day18_lavaduct_lagoon/: README.md  lavaduct_lagoon.py
sol/: utils.py
(+27 files in other folders)
