[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Ján Popeláš <janopopelas@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
