[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Ján Popeláš <janopopelas@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
pre-commit = "^3.5.0"
mypy = "^1.7.1"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
