[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Ján Popeláš <janopopelas@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.11.0"
pre-commit = "^3.5.0"
mypy = "^1.7.1"
pylint = "^3.0.2"
markdownify = "^0.11.6"
matplotlib = "^3.8.2"
shapely = "^2.0.2"
pyperclip = "^1.8.2"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
